button: Implement height-for-width

https://bugzilla.gnome.org/show_bug.cgi?id=698433